# sovajo_oficial

./: CMakeLists.txt  Test_PKA.h  Test_PKA_SUEN.h  Test_THA.h  Test_TKA_Match.h  Test_TKA_Tibia_Rotation.h  algorithms.cpp  pelvis.rar
CheckImageRod/: CMakeLists.txt  CheckImageRod.cpp  CheckImageRod.hpp  CheckImageRodConfig.cmake.in  CheckImageRodException.hpp  Types.hpp
Segmentation_Python/: SpineSegmentation.py
general_registration/: CMakeLists.txt  GeneralRegistrationPointsToPolydata.cpp  GeneralRegistrationPointsToPolydata.hpp  General_RegistrationConfig.cmake.in  LeastSquaresICP.cpp  LeastSquaresICP.hpp  RegistrationException.hpp  Types.hpp
general_registration/eigen3/unsupported/: doc.rar
hip/: CMakeLists.txt  DataFit.cpp  DataFit.hpp  HipCenter.cpp  HipCenter.hpp  HipConfig.cmake.in  HipException.hpp  TKA_HipConfig.cmake.in
implants/: Balance.cpp  Balance.hpp  BoneRotulaPath.cpp  BoneRotulaPath.hpp  CMakeLists.txt  ConvenxHull.cpp  ConvexHull.hpp  CoordenateSystemFemur.cpp  CoordenateSystemFemur.hpp  FemurImplant.cpp  FemurImplant.hpp  FemurImplantMatch.cpp  FemurImplantMatch.hpp  FindRegistrationPoints.cpp  FindRegistrationPoints.hpp  FitParabola.cpp  FitParabola.hpp  HipFemurStemImplant.hpp  HipFemurStemImplantMatch.hpp  HipPelvis.cpp  HipPelvis.hpp  HipPelvisCupImplantMatch.hpp  HipPelvisCupImplatMatch.cpp  HipPoints.hpp  ImplantTools.cpp  ImplantTools.hpp  ImplantsConfig.cmake.in  ImplantsException.hpp  ImplantsMatchFinalInfo.cpp  ImplantsMatchFinalInfo.hpp  Knee.cpp  Knee.hpp  LeastSquaresScaleICP.cpp  LeastSquaresScaleICP.hpp  LegAngle.cpp  LegAngle.hpp  Line.cpp  Line.hpp  Patella.cpp  Patella.hpp  (+22 more)
load_files/: CMakeLists.txt  LoadFiles.cpp  LoadFiles.hpp  LoadFilesConfig.cmake.in
pka_hip/: CMakeLists.txt  DataFit.cpp  DataFit.hpp  HipCenter.cpp  HipCenter.hpp  HipException.hpp  PKA_HipConfig.cmake.in
pka_implants/: Balance.cpp  Balance.hpp  CMakeLists.txt  ConvenxHull.cpp  ConvexHull.hpp  FemurImplant.cpp  FemurImplant.hpp  FemurImplantMatch.cpp  FemurImplantMatch.hpp  FitParabola.cpp  FitParabola.hpp  ImplantTools.cpp  ImplantTools.hpp  ImplantsException.hpp  Knee.cpp  Knee.hpp  LeastSquaresScaleICP.cpp  LeastSquaresScaleICP.hpp  LegAngle.cpp  LegAngle.hpp  Line.cpp  Line.hpp  PKA_ImplantsConfig.cmake.in  Plane.cpp  Plane.hpp  Point.cpp  Point.hpp  Segment.cpp  Segment.hpp  TemplatePoints.hpp  TibiaImplant.cpp  TibiaImplant.hpp  TibiaImplantMatch.cpp  TibiaImplantMatch.hpp  Types.hpp  Utils.hpp
pka_registration/: CMakeLists.txt  (+21 more)
registration/: CMakeLists.txt  FemurRegistration.cpp  FemurRegistration.hpp  GeneralRegistrationPointsToPolydata.cpp  GeneralRegistrationPointsToPolydata.hpp  HipFemurRegistration.cpp  HipFemurRegistration.hpp  HipPelvisRegistration.cpp  HipPelvisRegistration.hpp  KneeCapRegistration.cpp  KneeCapRegistration.hpp  LeastSquaresICP.cpp  LeastSquaresICP.hpp  LeastSquaresPoly.cpp  LeastSquaresPoly.hpp  RLine.cpp  RLine.hpp  RPlane.cpp  RPlane.hpp  Registration.cpp  Registration.hpp  RegistrationException.hpp  RegistrationPrivate.cpp  RegistrationPrivate.hpp  TKA_RegistrationConfig.cmake.in  TemplatePointsHip.hpp  TibiaRegistration.cpp  TibiaRegistration.hpp  Types.hpp
registration/eigen3/unsupported/: CMakeLists - copia.txt  bench.rar
segmentation/: AutomaticSegmentation.cpp  AutomaticSegmentation.hpp  CMakeLists.txt  GenerateSurface.cpp  GenerateSurface.hpp  GenerateSurfaceOld.cpp  GenerateSurfaceOld.hpp  MakeSurfaceTest.cpp  ManualSegmentation.cpp  ManualSegmentation.hpp  ResliceCallbackVTK.cpp  ResliceCallbackVTK.hpp  SPlane.cpp  SPlane.hpp  Segment.cpp  Segment.hpp  SegmentationConfig.cmake.in  SegmentationException.hpp  SliceBorder.cpp  SliceBorder.hpp  SliceBorderPrivate.cpp  SliceBorderPrivate.hpp  TKA_SegmentationConfig.cmake.in  Types.hpp  itkBinaryBoxStructuringElement.h
segmentation/surface/: BinaryTree.cpp  BinaryTree.hpp  Tiling.cpp  Tiling.hpp
segmentationDNN/segmentation_dnn/: CMakeLists.txt  PrivateData.cpp  PrivateData.hpp  segmentationDNN.cpp
test/: CMakeLists.txt  TestFunction.hpp  TestFusionImagen.hpp  TestVtk.hpp  UniformSpacing.hpp  segmentationTest.cpp  types_test.hpp
tha_hip/: CMakeLists.txt  DataFit.cpp  DataFit.hpp  HipCenter.cpp  HipCenter.hpp  HipException.hpp  THA_HipConfig.cmake.in
tha_registration/: CMakeLists.txt  GeneralRegistrationPointsToPolydata.cpp  GeneralRegistrationPointsToPolydata.hpp  HipFemurRegistration.cpp  HipFemurRegistration.hpp  HipFemurRegistrationAnterior.cpp  HipFemurRegistrationAnterior.hpp  HipFemurRegistrationPosterior.cpp  HipFemurRegistrationPosterior.hpp  HipPelvisRegistration.cpp  HipPelvisRegistration.hpp  LeastSquaresICP.cpp  LeastSquaresICP.hpp  LeastSquaresPoly.cpp  LeastSquaresPoly.hpp  RLine.cpp  RLine.hpp  RPlane.cpp  RPlane.hpp  Registration.cpp  Registration.hpp  RegistrationException.hpp  RegistrationPrivate.cpp  RegistrationPrivate.hpp  THA_RegistrationConfig.cmake.in  TemplatePointsHip.hpp  Types.hpp
tha_registration/eigen3/unsupported/: test.rar
uka_hip/: CMakeLists.txt  DataFit.cpp  DataFit.hpp  HipCenter.cpp  HipCenter.hpp  HipException.hpp  UKA_HipConfig.cmake.in
uka_implants/: Balance.cpp  Balance.hpp  CMakeLists.txt  ConvenxHull.cpp  ConvexHull.hpp  FemurImplant.cpp  FemurImplant.hpp  FemurImplantMatch.cpp  FemurImplantMatch.hpp  FemurImplantOnePlane.cpp  FemurImplantOnePlane.hpp  FemurImplantThreePlane.cpp  FemurImplantThreePlane.hpp  FemurImplantTwoPlane.cpp  FemurImplantTwoPlane.hpp  FindRegistrationPoints.cpp  FindRegistrationPoints.hpp  FitParabola.cpp  FitParabola.hpp  ImplantTools.cpp  ImplantTools.hpp  ImplantsException.hpp  ImplantsMatchFinalInfo.cpp  ImplantsMatchFinalInfo.hpp  Knee.cpp  Knee.hpp  LeastSquaresScaleICP.cpp  LeastSquaresScaleICP.hpp  LegAngle.cpp  LegAngle.hpp  Line.cpp  Line.hpp  Plane.cpp  Plane.hpp  Point.cpp  Point.hpp  Segment.cpp  Segment.hpp  TemplatePoints.hpp  TibiaImplant.cpp  (+10 more)
uka_segmentation/: CMakeLists.txt  ManualSegmentation.cpp  ManualSegmentation.hpp  SegmentationException.hpp  Types.hpp  UKA_SegmentationConfig.cmake.in  itkBinaryBoxStructuringElement.cpp  itkImageToVTKImageFilter.hxx
(+196 files in other folders)
