cmake_minimum_required(VERSION 2.8.9)
project(algorithms_test)
add_subdirectory(hip)
add_subdirectory(tha_hip)
add_subdirectory(implants)
add_subdirectory(uka_implants)
add_subdirectory(uka_segmentation)
add_subdirectory(registration)
add_subdirectory(tha_implants)
add_subdirectory(tha_registration)
add_subdirectory(uka_registration)
add_subdirectory(segmentation)
add_subdirectory(tha_segmentation)
add_subdirectory(load_files)
add_subdirectory(test)
add_subdirectory(general_registration)
add_subdirectory(uka_hip)
add_subdirectory(CheckImageRod)
add_subdirectory(spine_registration_DRR)
add_subdirectory(spine_registration_general)
find_package(ITK REQUIRED)
include(${ITK_USE_FILE})
find_package(VTK REQUIRED)
include(${VTK_USE_FILE})
add_executable(${PROJECT_NAME} algorithms.cpp Test_TKA_Match.h)
#target_link_libraries(${PROJECT_NAME} TKA_Hip THA_Hip TKA_Implants TKA_Registration PKA_Registration TKA_Segmentation THA_Implants THA_Registration THA_Segmentation LoadFiles test CheckImageRod)


target_link_libraries(${PROJECT_NAME} TKA_Hip THA_Hip UKA_Hip TKA_Implants UKA_Implants TKA_Registration SPINE_Registration UKA_Registration TKA_Segmentation UKA_Segmentation THA_Implants THA_Registration THA_Segmentation SPINE_REGISTRATION_DRR General_Registration LoadFiles test CheckImageRod)