cmake_minimum_required(VERSION 2.8.9)
project(test)
#find_package(ITK COMPONENTS ITKIOImageBase REQUIRED)
find_package(ITK REQUIRED)
include(${ITK_USE_FILE})
find_package(OpenCV REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS})
set(Boost_COMPILER "-vc142")
#find_package(PCL 1.9 REQUIRED COMPONENTS commom io visualization filters)
#find_package(PCL 1.10 REQUIRED COMPONENTS io filters)
#include_directories(${PCL_INCLUDE_DIRS})
#link_directories(${PCL_LIBRARY_DIRS})
#add_definitions(${PCL_DEFINITIONS})
find_package(VTK REQUIRED)
include(${VTK_USE_FILE})
find_package(Qt5 REQUIRED Core)
file(GLOB_RECURSE _HDRS "*.hpp")
file(GLOB_RECURSE _SRCS "*.cpp")
add_library(test ${_HDRS} ${_SRCS})
target_link_libraries(test ${ITK_LIBRARIES} ${OpenCV_LIBS} ${VTK_LIBRARIES} Qt5::Core)
