cmake_minimum_required(VERSION 3.0.0)
project(segmentation_dnn VERSION 1.0.1 LANGUAGES CXX)
include_directories(tensorflow tensorflow)
find_package(ITK REQUIRED)
include(${ITK_USE_FILE})
find_package(OpenCV REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS})
file(GLOB_RECURSE _HDRS "*.hpp")
file(GLOB_RECURSE _SRCS "*.cpp")
add_library(segmentation_dnn ${_HDRS} ${_SRCS})
target_link_libraries(segmentation_dnn ${ITK_LIBRARIES} ${OpenCV_LIBS} "${CMAKE_CURRENT_SOURCE_DIR}/lib/tensorflow.lib")
